--- a/base/src/main/res/layout/product_grid_items.xml
+++ b/base/src/main/res/layout/product_grid_items.xml
@@ -5,8 +5,6 @@
 
     <data>
 
-        <import type="android.view.View" />
-
         <variable
             name="commondata"
             type="com.shopify.shopifyapp.basesection.models.CommanModel" />
@@ -17,35 +15,30 @@
 
         <variable
             name="clickproduct"
-            type="com.shopify.shopifyapp.homesection.adapters.ProductGridAdapter.Product" />
+            type="com.shopify.shopifyapp.homesection.adapters.ProductSliderAdapter.Product" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/main_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginEnd="4dp"
-        android:paddingStart="2dp"
-        android:paddingTop="1dp"
-        android:paddingEnd="2dp"
-        android:paddingBottom="2dp">
+        android:layout_margin="5dp">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/card"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="@color/white"
-            app:cardCornerRadius="8dp"
-            app:cardUseCompatPadding="true"
-            app:layout_constraintDimensionRatio="H,1:1.6"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="16dp"
+            app:cardPreventCornerOverlap="false"
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/main"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/white"
+                android:layout_marginStart="1.2dp"
+                android:layout_marginTop="1.2dp"
+                android:layout_marginEnd="1.2dp"
+                android:layout_marginBottom="1.2dp"
                 android:onClick="@{(view) -> clickproduct.productClick(view,listdata)}">
 
                 <androidx.appcompat.widget.AppCompatImageView
@@ -53,9 +46,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:contentDescription="@string/image"
-                    android:scaleType="centerCrop"
-                    app:layout_constraintBottom_toTopOf="@+id/nameandpricesection"
-                    app:layout_constraintDimensionRatio="H,1:1"
+                    android:scaleType="fitXY"
+                    app:layout_constraintBottom_toTopOf="@id/nameandpricesection"
+                    app:layout_constraintDimensionRatio="H,1:1.1"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -63,8 +56,8 @@
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/out_of_stock"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:src="@drawable/outofstock"
                     android:visibility="gone"
                     app:layout_constraintBottom_toBottomOf="@+id/image"
@@ -72,62 +65,71 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/nameandpricesection"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="4dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="10dp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/image">
 
                     <com.shopify.shopifyapp.customviews.MageNativeTextView
                         android:id="@+id/name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="2dp"
-                        android:layout_marginEnd="2dp"
-                        android:gravity="center"
-                        android:maxLines="2"
+                        android:ellipsize="end"
+                        android:gravity="center_vertical"
+                        android:maxLines="1"
+                        android:padding="2dp"
                         android:text="@{listdata.textdata}"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"
-                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:texttype="bold" />
 
-                    <com.shopify.shopifyapp.customviews.MageNativeTextView
-                        android:id="@+id/specialprice"
+                    <LinearLayout
+                        android:id="@+id/pricesection"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="2dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginEnd="2dp"
-                        android:gravity="center"
-                        android:text="@{listdata.specialprice == null ? listdata.regularprice:listdata.specialprice}"
-                        android:textAppearance="?android:attr/textAppearanceListItemSmall"
-                        app:layout_constraintEnd_toEndOf="parent"
+                        android:orientation="horizontal"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/regularprice"
-                        app:texttype="normal" />
+                        app:layout_constraintTop_toBottomOf="@id/name">
 
-                    <com.shopify.shopifyapp.customviews.MageNativeTextView
-                        android:id="@+id/regularprice"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="2dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginEnd="2dp"
-                        android:gravity="center"
-                        android:text="@{listdata.regularprice}"
-                        android:textAppearance="?android:attr/textAppearanceListItemSmall"
-                        android:visibility="@{listdata.specialprice == null ? View.INVISIBLE : View.VISIBLE}"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/name"
-                        app:texttype="normal" />
+                        <com.shopify.shopifyapp.customviews.MageNativeTextView
+                            android:id="@+id/regularprice"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="2dp"
+                            android:gravity="center_vertical"
+                            android:text="@{listdata.regularprice}"
+                            android:textAppearance="?android:attr/textAppearanceListItemSmall"
+                            app:texttype="normal" />
+
+                        <com.shopify.shopifyapp.customviews.MageNativeTextView
+                            android:id="@+id/specialprice"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="2dp"
+                            android:gravity="center_vertical"
+                            android:text="@{listdata.specialprice}"
+                            android:textAppearance="?android:attr/textAppearanceListItemSmall"
+                            android:visibility="gone"
+                            app:texttype="normal" />
+                    </LinearLayout>
                 </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/addCart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="@{(view) -> clickproduct.addCart(view,listdata)}"
+                    android:visibility="gone"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/nameandpricesection" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </layout>
