--- a/base/src/main/res/layout/m_productitem.xml
+++ b/base/src/main/res/layout/m_productitem.xml
@@ -20,7 +20,7 @@
 
         <variable
             name="clickproduct"
-            type="com.shopify.shopifyapp.productsection.adapters.ProductRecylerAdapter.Product" />
+            type="com.shopify.shopifyapp.productsection.adapters.ProductRecylerGridAdapter.Product" />
     </data>
 
     <!--    <androidx.cardview.widget.CardView-->
