--- a/base/src/main/res/layout/m_productlistitem.xml
+++ b/base/src/main/res/layout/m_productlistitem.xml
@@ -3,7 +3,8 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/mainview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white">
         <include layout="@layout/m_productmain" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
