--- a/base/src/main/res/layout/m_cartitem.xml
+++ b/base/src/main/res/layout/m_cartitem.xml
@@ -15,6 +15,13 @@
             type="com.shopify.shopifyapp.basesection.models.CommanModel" />
 
         <variable
+            name="currencyCode"
+            type="String" />
+        <variable
+            name="productPrice"
+            type="Double" />
+
+        <variable
             name="handlers"
             type="com.shopify.shopifyapp.cartsection.adapters.CartListAdapter.ClickHandlers" />
     </data>
@@ -241,7 +248,7 @@
                 android:layout_height="35dp"
                 android:layout_margin="2dp"
                 android:gravity="center"
-                android:onClick="@{view->handlers.moveToWishList(view,variantdata)}"
+                android:onClick="@{view->handlers.moveToWishList(view,variantdata,currencyCode,productPrice)}"
                 android:padding="5dp"
                 android:text="@string/movetowish"
                 bind:layout_constraintEnd_toEndOf="parent"
