--- a/base/src/main/res/layout/m_productitem.xml
+++ b/base/src/main/res/layout/m_productitem.xml
@@ -90,6 +90,7 @@
             android:layout_height="22dp"
             android:layout_marginTop="15dp"
             android:onClick="@{(view) -> clickproduct.addCart(view,listdata)}"
+            android:visibility="@{features.addCartEnabled ? View.VISIBLE : View.GONE}"
             bind:layout_constraintEnd_toEndOf="@id/wishlist_but"
             bind:layout_constraintStart_toStartOf="@+id/wishlist_but"
             bind:layout_constraintTop_toBottomOf="@+id/wishlist_but"
