--- a/base/src/main/res/layout/optionmenu_dialog.xml
+++ b/base/src/main/res/layout/optionmenu_dialog.xml
@@ -1,111 +1,128 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
-    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
-        app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="5dp"
-        app:cardElevation="5dp"
-        app:cardUseCompatPadding="true">
+        android:layout_height="wrap_content">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="end"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="5dp"
+            android:elevation="5dp"
+            app:srcCompat="@drawable/arrow_top" />
+
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/white"
-            android:padding="20dp">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="5dp"
+            app:cardPreventCornerOverlap="false">
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/wishlist_icon"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/wishlist_icon" />
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/wishlist_but"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="3dp"
-                android:fontFamily="@font/roboto_bold"
-                android:text="@string/my_favorite"
-                android:textColor="@color/main_color_gray_lt"
-                android:textAllCaps="true"
-                android:textSize="12sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/wishlist_icon"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <View
-                android:id="@+id/line1"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:layout_marginTop="20dp"
-                android:background="@color/main_color_gray_lt"
-                app:layout_constraintTop_toBottomOf="@+id/wishlist_but" />
+                android:layout_height="match_parent"
+                android:background="@color/white"
+                android:padding="20dp">
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/share_icon"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginTop="20dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/line1"
-                app:srcCompat="@drawable/share_icon" />
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/wishlist_icon"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/wishlist_icon" />
 
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/share_but"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="22dp"
-                android:fontFamily="@font/roboto_bold"
-                android:text="@string/share_this"
-                android:textAllCaps="true"
-                android:textColor="@color/main_color_gray_lt"
-                android:textSize="12sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/wishlist_icon"
-                app:layout_constraintTop_toBottomOf="@+id/line1" />
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/wishlist_but"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="3dp"
+                    android:fontFamily="@font/roboto_bold"
+                    android:text="@string/my_favorite"
+                    android:textAllCaps="true"
+                    android:textColor="@color/main_color_gray_lt"
+                    android:textSize="12sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/wishlist_icon"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-            <View
-                android:id="@+id/line2"
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:layout_marginTop="20dp"
-                android:background="@color/main_color_gray_lt"
-                app:layout_constraintTop_toBottomOf="@+id/share_but" />
+                <View
+                    android:id="@+id/line1"
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:layout_marginTop="20dp"
+                    android:background="@color/main_color_gray_lt"
+                    app:layout_constraintTop_toBottomOf="@+id/wishlist_but" />
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/close_icon"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginTop="20dp"
-                android:tint="@color/black"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/line2"
-                app:srcCompat="@drawable/ic_cancel" />
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/share_icon"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginTop="20dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/line1"
+                    app:srcCompat="@drawable/share_icon" />
 
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/close_but"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="22dp"
-                android:fontFamily="@font/roboto_bold"
-                android:text="@string/not_intrested_in"
-                android:textColor="@color/main_color_gray_lt"
-                android:textAllCaps="true"
-                android:textSize="12sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/wishlist_icon"
-                app:layout_constraintTop_toBottomOf="@+id/line2" />
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/share_but"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="22dp"
+                    android:fontFamily="@font/roboto_bold"
+                    android:text="@string/share_this"
+                    android:textAllCaps="true"
+                    android:textColor="@color/main_color_gray_lt"
+                    android:textSize="12sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/wishlist_icon"
+                    app:layout_constraintTop_toBottomOf="@+id/line1" />
+
+                <View
+                    android:id="@+id/line2"
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:layout_marginTop="20dp"
+                    android:background="@color/main_color_gray_lt"
+                    app:layout_constraintTop_toBottomOf="@+id/share_but" />
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/close_icon"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginTop="20dp"
+                    android:tint="@color/black"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/line2"
+                    app:srcCompat="@drawable/ic_cancel" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/close_but"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="22dp"
+                    android:fontFamily="@font/roboto_bold"
+                    android:text="@string/not_intrested_in"
+                    android:textAllCaps="true"
+                    android:textColor="@color/main_color_gray_lt"
+                    android:textSize="12sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/wishlist_icon"
+                    app:layout_constraintTop_toBottomOf="@+id/line2" />
 
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+    </FrameLayout>
 </layout>
 
