--- a/base/src/main/res/layout/product_list_item.xml
+++ b/base/src/main/res/layout/product_list_item.xml
@@ -79,6 +79,7 @@
                     android:layout_marginEnd="5dp"
                     android:maxLines="2"
                     android:text="@{listdata.textdata}"
+                    android:onClick="@{(view) -> clickproduct.productClick(view,listdata)}"
                     android:textAppearance="?android:attr/textAppearanceListItemSmall"
                     bind:layout_constraintEnd_toStartOf="@+id/option_menu"
                     bind:layout_constraintStart_toStartOf="parent"
@@ -108,6 +109,7 @@
                     android:onClick="@{view->clickproduct.menuClick(view,listdata)}"
                     android:src="@drawable/menu_indicator"
                     android:tint="@color/black"
+                    android:layout_marginEnd="5dp"
                     bind:layout_constraintEnd_toEndOf="parent"
                     bind:layout_constraintStart_toEndOf="@+id/name"
                     bind:layout_constraintTop_toTopOf="parent" />
@@ -195,6 +197,7 @@
                         android:id="@+id/increase"
                         android:layout_width="25dp"
                         android:layout_height="25dp"
+                        android:layout_marginEnd="5dp"
                         android:contentDescription="@string/image"
                         android:onClick="@{(view) -> clickproduct.increase(view,listdata)}"
                         android:src="@drawable/plus_black" />
