--- a/base/src/main/res/values/colors.xml
+++ b/base/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="black">#000000</color>
     <color name="main_color_gray_lt">#acacac</color>
     <color name="green">#008000</color>
+    <color name="button_green">#1ACE2F</color>
     <color name="light_cream">#FFFFFADC</color>
     <color name="red">#F90A0B</color>
     <color name="price_red">#F90A0B</color>
