--- a/base/src/main/res/layout/m_productmain.xml
+++ b/base/src/main/res/layout/m_productmain.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <com.shopify.shopifyapp.customviews.MageNativeTextView
             android:id="@+id/sort_but"
@@ -30,6 +30,7 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginStart="5dp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@+id/sort_but"
             app:layout_constraintEnd_toStartOf="@+id/list_but"
             app:layout_constraintStart_toEndOf="@+id/sort_but"
@@ -42,6 +43,7 @@
             android:layout_height="20dp"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@+id/sort_but"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/grid_but"
