--- a/base/src/main/res/values/colors.xml
+++ b/base/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="light_cream">#FFFFFADC</color>
     <color name="red">#F90A0B</color>
     <color name="price_red">#F90A0B</color>
+    <color name="orange">#ff9500</color>
 </resources>
