--- a/base/src/main/res/layout/m_cartitem.xml
+++ b/base/src/main/res/layout/m_cartitem.xml
@@ -17,6 +17,7 @@
         <variable
             name="currencyCode"
             type="String" />
+
         <variable
             name="productPrice"
             type="Double" />
@@ -200,15 +201,32 @@
                     android:src="@drawable/plus_icon" />
             </LinearLayout>
 
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/notinstock"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="18dp"
+                android:fontFamily="@font/roboto_bold"
+                android:text="@string/the_product_is_currently_not_in_stock"
+                android:textColor="@color/red"
+                android:textSize="12sp"
+                android:visibility="gone"
+                bind:layout_constraintEnd_toEndOf="parent"
+                bind:layout_constraintStart_toStartOf="parent"
+                bind:layout_constraintTop_toBottomOf="@+id/image" />
+
             <com.shopify.shopifyapp.customviews.MageNativeTextView
                 android:id="@+id/line"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_margin="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="5dp"
                 android:alpha="0.5"
                 android:background="@color/gray_color"
                 bind:layout_constraintStart_toStartOf="parent"
-                bind:layout_constraintTop_toBottomOf="@id/image"
+                bind:layout_constraintTop_toBottomOf="@id/notinstock"
                 bind:texttype="normal" />
 
             <com.shopify.shopifyapp.customviews.MageNativeTextView
