--- a/base/src/main/res/layout/m_productview.xml
+++ b/base/src/main/res/layout/m_productview.xml
@@ -6,6 +6,7 @@
     <data>
 
         <import type="android.view.View" />
+
         <variable
             name="features"
             type="com.shopify.shopifyapp.basesection.models.FeaturesModel" />
@@ -17,6 +18,7 @@
         <variable
             name="clickhandlers"
             type="com.shopify.shopifyapp.productsection.activities.ProductView.ClickHandlers" />
+
         <variable
             name="arImagesList"
             type="java.util.ArrayList" />
@@ -244,6 +246,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:textStyle="normal"
+                android:visibility="gone"
                 bind:layout_constraintStart_toStartOf="parent"
                 bind:layout_constraintTop_toBottomOf="@+id/regularprice"
                 bind:texttype="normal" />
