--- a/base/src/main/res/layout/m_categorygriditem.xml
+++ b/base/src/main/res/layout/m_categorygriditem.xml
@@ -17,6 +17,7 @@
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="@{(view) -> categorydata.gridClick(view,categorydata)}"
         android:layout_margin="5dp">
 
         <androidx.cardview.widget.CardView
@@ -32,6 +33,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/inner_container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/white">
@@ -51,14 +53,14 @@
                 <com.shopify.shopifyapp.customviews.MageNativeTextView
                     android:id="@+id/name"
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
+                    android:layout_height="45dp"
                     android:layout_marginTop="8dp"
                     android:gravity="start|center_vertical"
                     android:maxLines="2"
                     android:ellipsize="end"
-                    android:paddingStart="4dp"
-                    android:paddingEnd="4dp"
-                    android:paddingBottom="5dp"
+                    android:paddingStart="3dp"
+                    android:paddingEnd="3dp"
+                    android:paddingBottom="3dp"
                     android:text="@{categorydata.category_name}"
                     android:textAppearance="?android:attr/textAppearanceListItemSmall"
                     app:layout_constraintBottom_toBottomOf="parent"
