--- a/base/src/main/res/values/styles.xml
+++ b/base/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <item name="colorControlNormal">@color/white</item>
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
-        <item name="android:windowBackground">@null</item>
+        <item name="android:windowBackground">@drawable/splash_bg</item>
         <item name="android:windowAllowEnterTransitionOverlap">true</item>
         <item name="android:windowAllowReturnTransitionOverlap">true</item>
         <!-- color of the menu overflow icon -->
@@ -19,7 +19,7 @@
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowNoTitle">true</item>
         <item name="windowActionBarOverlay">true</item>
-        <item name="android:windowBackground">@null</item>
+        <item name="android:windowBackground">@drawable/splash_bg</item>
         <item name="android:windowActionBarOverlay">true</item>
         <item name="windowActionModeOverlay">true</item>
         <item name="colorPrimary">@color/black</item>
