--- a/base/src/main/res/layout/m_productview.xml
+++ b/base/src/main/res/layout/m_productview.xml
@@ -621,6 +621,94 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/ali_review_section"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:background="@color/white"
+                android:padding="10dp"
+                android:visibility="@{features.aliReviews ? View.VISIBLE : View.GONE}"
+                bind:layout_constraintTop_toBottomOf="@+id/review_section">
+
+                <com.shopify.shopifyapp.customviews.MageNativeTextView
+                    android:id="@+id/ali_ratting_review_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:fontFamily="@font/roboto_bold"
+                    android:text="@string/ratings_reviews"
+                    bind:layout_constraintStart_toStartOf="parent"
+                    bind:layout_constraintTop_toTopOf="parent"
+                    bind:texttype="bold" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/ali_view_all_but"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:fontFamily="@font/roboto_bold"
+                    android:onClick="@{view->clickhandlers.viewAllAliReview(view)}"
+                    android:text="@string/view_all"
+                    android:textColor="@android:color/holo_blue_dark"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
+                    bind:layout_constraintEnd_toEndOf="parent"
+                    bind:layout_constraintTop_toBottomOf="@+id/ali_ratting_review_title" />
+
+
+                <androidx.viewpager2.widget.ViewPager2
+                    android:id="@+id/ali_review_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal"
+                    android:visibility="gone"
+                    bind:layout_constraintTop_toBottomOf="@+id/ali_view_all_but"
+                    tools:listitem="@layout/review_list_item" />
+
+                <me.relex.circleindicator.CircleIndicator3
+                    android:id="@+id/ali_review_indecator"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:visibility="gone"
+                    bind:layout_constraintEnd_toEndOf="parent"
+                    bind:layout_constraintStart_toStartOf="parent"
+                    bind:layout_constraintTop_toBottomOf="@+id/ali_review_list" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/ali_rate_product_but"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:fontFamily="@font/roboto_bold"
+                    android:onClick="@{(view) -> clickhandlers.rateProductJudgeMe(view,productdata)}"
+                    android:padding="8dp"
+                    android:text="@string/rate_product"
+                    android:textColor="@android:color/holo_blue_dark"
+                    android:textSize="14sp"
+                    android:visibility="gone"
+                    bind:constraint_referenced_ids="ali_review_list,ali_no_reviews"
+                    bind:layout_constraintStart_toStartOf="parent"
+                    bind:layout_constraintTop_toBottomOf="@+id/ali_review_indecator" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/ali_no_reviews"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:fontFamily="@font/roboto_light"
+                    android:text="@string/sorry_this_product_does_not_have_any_reviews"
+                    android:textSize="12sp"
+                    bind:layout_constraintEnd_toEndOf="parent"
+                    bind:layout_constraintStart_toStartOf="parent"
+                    bind:layout_constraintTop_toBottomOf="@+id/ali_view_all_but" />
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/personalisedsection"
                 android:layout_width="match_parent"
@@ -628,7 +716,7 @@
                 android:background="@color/main_color_gray_lt"
                 android:visibility="gone"
                 bind:layout_constraintBottom_toTopOf="@+id/shopifyrecommended_section"
-                bind:layout_constraintTop_toBottomOf="@id/judgeme_review_section">
+                bind:layout_constraintTop_toBottomOf="@id/ali_review_section">
 
                 <com.shopify.shopifyapp.customviews.MageNativeTextView
                     android:id="@+id/personalisedyext"
